// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`local file:// protocol with npm for project outside workspace 1`] = `
{
  "linux": [],
}
`;

exports[`local file:// protocol with pnpm for project outside workspace 1`] = `
{
  "linux": [],
}
`;

exports[`local file:// protocol with yarn for project outside workspace 1`] = `
{
  "linux": [],
}
`;

exports[`local file:// protocol with yarn-berry for project outside workspace 1`] = `
{
  "linux": [],
}
`;

exports[`npm 1`] = `
{
  "linux": [],
}
`;

exports[`npm 2`] = `
{
  "files": {
    "app": {
      "files": {
        "package.json": {
          "files": {
            "readme.md": {
              "size": 32,
            },
          },
        },
        "readme.md": {
          "size": 78,
        },
      },
    },
    "index.html": {
      "size": 841,
    },
    "index.js": {
      "size": 4184,
    },
    "node_modules": {
      "files": {
        "debug": {
          "files": {
            "LICENSE": {
              "size": 1139,
            },
            "package.json": {
              "size": 910,
            },
            "src": {
              "files": {
                "browser.js": {
                  "size": 6103,
                },
                "common.js": {
                  "size": 6915,
                },
                "index.js": {
                  "size": 314,
                },
                "node.js": {
                  "size": 4728,
                },
              },
            },
          },
        },
        "ms": {
          "files": {
            "index.js": {
              "size": 3024,
            },
            "license.md": {
              "size": 1079,
            },
            "package.json": {
              "size": 497,
            },
          },
        },
      },
    },
    "package.json": {
      "size": 369,
    },
  },
}
`;

exports[`pnpm 1`] = `
{
  "linux": [],
}
`;

exports[`pnpm 2`] = `
{
  "files": {
    "app": {
      "files": {
        "package.json": {
          "files": {
            "readme.md": {
              "size": 32,
            },
          },
        },
        "readme.md": {
          "size": 78,
        },
      },
    },
    "index.html": {
      "size": 841,
    },
    "index.js": {
      "size": 4184,
    },
    "node_modules": {
      "files": {
        "debug": {
          "files": {
            "LICENSE": {
              "size": 1139,
            },
            "package.json": {
              "size": 910,
            },
            "src": {
              "files": {
                "browser.js": {
                  "size": 6103,
                },
                "common.js": {
                  "size": 6915,
                },
                "index.js": {
                  "size": 314,
                },
                "node.js": {
                  "size": 4728,
                },
              },
            },
          },
        },
        "ms": {
          "files": {
            "index.js": {
              "size": 3024,
            },
            "license.md": {
              "size": 1079,
            },
            "package.json": {
              "size": 497,
            },
          },
        },
      },
    },
    "package.json": {
      "size": 508,
    },
  },
}
`;

exports[`pnpm workspace - conflicting versions 1`] = `
{
  "linux": [],
}
`;

exports[`pnpm workspace 1`] = `
{
  "linux": [],
}
`;

exports[`yarn 1`] = `
{
  "linux": [],
}
`;

exports[`yarn 2`] = `
{
  "files": {
    "index.html": {
      "size": 378,
    },
    "index.js": {
      "size": 619,
    },
    "node_modules": {
      "files": {
        "debug": {
          "files": {
            "LICENSE": {
              "size": 1139,
            },
            "node_modules": {
              "files": {
                "ms": {
                  "files": {
                    "index.js": {
                      "size": 3024,
                    },
                    "license.md": {
                      "size": 1079,
                    },
                    "package.json": {
                      "size": 497,
                    },
                  },
                },
              },
            },
            "package.json": {
              "size": 910,
            },
            "src": {
              "files": {
                "browser.js": {
                  "size": 6103,
                },
                "common.js": {
                  "size": 6915,
                },
                "index.js": {
                  "size": 314,
                },
                "node.js": {
                  "size": 4728,
                },
              },
            },
          },
        },
        "ms": {
          "files": {
            "index.js": {
              "size": 3024,
            },
            "license.md": {
              "size": 1079,
            },
            "package.json": {
              "size": 497,
            },
          },
        },
      },
    },
    "package.json": {
      "size": 339,
    },
    "path": {
      "files": {
        "app.asar": {
          "size": 714,
        },
      },
    },
  },
}
`;

exports[`yarn berry 1`] = `
{
  "linux": [],
}
`;

exports[`yarn berry 2`] = `
{
  "files": {
    "index.html": {
      "size": 378,
    },
    "index.js": {
      "size": 619,
    },
    "node_modules": {
      "files": {
        "debug": {
          "files": {
            "LICENSE": {
              "size": 1139,
            },
            "package.json": {
              "size": 910,
            },
            "src": {
              "files": {
                "browser.js": {
                  "size": 6103,
                },
                "common.js": {
                  "size": 6915,
                },
                "index.js": {
                  "size": 314,
                },
                "node.js": {
                  "size": 4728,
                },
              },
            },
          },
        },
        "ms": {
          "files": {
            "index.js": {
              "size": 3024,
            },
            "license.md": {
              "size": 1079,
            },
            "package.json": {
              "size": 497,
            },
          },
        },
      },
    },
    "package.json": {
      "size": 307,
    },
    "path": {
      "files": {
        "app.asar": {
          "size": 714,
        },
      },
    },
  },
}
`;

exports[`yarn berry multi-package workspace 1`] = `
{
  "linux": [],
}
`;

exports[`yarn berry multi-package workspace 2`] = `
{
  "files": {
    "index.html": {
      "size": 841,
    },
    "index.js": {
      "size": 2501,
    },
    "node_modules": {
      "files": {
        "debug": {
          "files": {
            "LICENSE": {
              "size": 1139,
            },
            "package.json": {
              "size": 910,
            },
            "src": {
              "files": {
                "browser.js": {
                  "size": 6103,
                },
                "common.js": {
                  "size": 6915,
                },
                "index.js": {
                  "size": 314,
                },
                "node.js": {
                  "size": 4728,
                },
              },
            },
          },
        },
        "ms": {
          "files": {
            "index.js": {
              "size": 3024,
            },
            "license.md": {
              "size": 1079,
            },
            "package.json": {
              "size": 497,
            },
          },
        },
      },
    },
    "package.json": {
      "size": 321,
    },
  },
}
`;

exports[`yarn berry pnp workspace 1`] = `
{
  "linux": [],
}
`;

exports[`yarn berry workspace 1`] = `
{
  "linux": [],
}
`;

exports[`yarn berry workspace 2`] = `
{
  "files": {
    "index.html": {
      "size": 841,
    },
    "index.js": {
      "size": 2501,
    },
    "node_modules": {
      "files": {
        "debug": {
          "files": {
            "LICENSE": {
              "size": 1139,
            },
            "package.json": {
              "size": 910,
            },
            "src": {
              "files": {
                "browser.js": {
                  "size": 6103,
                },
                "common.js": {
                  "size": 6915,
                },
                "index.js": {
                  "size": 314,
                },
                "node.js": {
                  "size": 4728,
                },
              },
            },
          },
        },
        "ms": {
          "files": {
            "index.js": {
              "size": 3024,
            },
            "license.md": {
              "size": 1079,
            },
            "package.json": {
              "size": 497,
            },
          },
        },
      },
    },
    "package.json": {
      "size": 321,
    },
  },
}
`;

exports[`yarn multi-package workspace 1`] = `
{
  "linux": [],
}
`;

exports[`yarn multi-package workspace 2`] = `
{
  "files": {
    "index.html": {
      "size": 841,
    },
    "index.js": {
      "size": 2501,
    },
    "node_modules": {
      "files": {
        "debug": {
          "files": {
            "LICENSE": {
              "size": 1139,
            },
            "package.json": {
              "size": 910,
            },
            "src": {
              "files": {
                "browser.js": {
                  "size": 6103,
                },
                "common.js": {
                  "size": 6915,
                },
                "index.js": {
                  "size": 314,
                },
                "node.js": {
                  "size": 4728,
                },
              },
            },
          },
        },
        "foo": {
          "files": {
            "index.js": {
              "size": 35,
            },
            "package.json": {
              "size": 127,
            },
          },
        },
        "ms": {
          "files": {
            "index.js": {
              "size": 2764,
            },
            "license.md": {
              "size": 1077,
            },
            "package.json": {
              "size": 469,
            },
          },
        },
      },
    },
    "package.json": {
      "size": 353,
    },
  },
}
`;

exports[`yarn workspace 1`] = `
{
  "linux": [],
}
`;

exports[`yarn workspace 2`] = `
{
  "files": {
    "index.html": {
      "size": 841,
    },
    "index.js": {
      "size": 2501,
    },
    "node_modules": {
      "files": {
        "debug": {
          "files": {
            "LICENSE": {
              "size": 1139,
            },
            "package.json": {
              "size": 910,
            },
            "src": {
              "files": {
                "browser.js": {
                  "size": 6103,
                },
                "common.js": {
                  "size": 6915,
                },
                "index.js": {
                  "size": 314,
                },
                "node.js": {
                  "size": 4728,
                },
              },
            },
          },
        },
        "ms": {
          "files": {
            "index.js": {
              "size": 3024,
            },
            "license.md": {
              "size": 1079,
            },
            "package.json": {
              "size": 497,
            },
          },
        },
      },
    },
    "package.json": {
      "size": 353,
    },
  },
}
`;
